# embeddings

./: .gitignore  LICENSE  README.md  embeddings.sln  pyproject.toml
.github/workflows/: ci.yml
embeddings/: __init__.py
examples/: QuickStart.py  fastText.py  search.py  search.yaml  test.py
examples/dotnet/: README.md  cBLAS.cs  dotnet.cs  dotnet.csproj  kernel32.cs
examples/dotnet/Intel/: Intel.cs  Intel.mkl.cs
src/: embeddings.c  embeddings.cs  embeddings.h  embeddings.vcxproj
